# Scaling-Laws-of-Cardinality-Estimators

./: .gitignore  CLAUDE.md  HANDOVER.md  HANDOVER_stage1.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.json
data/: GRAPH_SIZES.md
developer_docs/: NotesForReport.md  README.md  block-refactoring-guide.md  problems.md  report_outline.md
docs/: NotesForReport.md  README.md  assumptions.md  block-refactoring-guide.md  generation_algorithm_fit.md  generator.md  report_outline.md  signature.md  signature_measurement_plan.md  signature_observations.md  signature_redesign.md  transform.md
examples/: README.md  generate_and_compare.py  measure_a_kg.py  perturb_dataset.yaml
experiments/: fb237_v4_ind.jsonl
experiments_remeasure/: fb237_v4_ind_target.json
scripts/: README.md  _stage2.py  aggregate_signatures.py  cc_variance.py  cc_variance_viz.py  convergence_plot.py  convergence_plot_grid.py  dataset_error_boxplot.py  edge_multiplicity.py  estimator_variance.py  get_data.py  measure_all_raw.py  measure_all_raw.sh  measure_block_e.py  measure_signature.py  measure_signature_reduced.py  multi_dataset_pca.py  patch_block_b_degree_stats.py  plot_graphs.py  plot_out_degree_standalone.py  plot_signature_distributions.py  plot_signature_pca.py  plot_sweep_pca.py  profile_stage3_deltas.py  rebuild_signature_aggregates.py  relation_reciprocity.py  rerender_signatures.py  roundtrip_pca.py  sample_signature.py  signature_error_boxplot.py  signature_pca_trajectory.py  signature_roundtrip.py  swap_delta_viz.py  sweep_adaptive_weight_scale.py  sweep_collect.py  sweep_error_boxplot.py  sweep_viz.py  viz_sampling_approaches.py
sig_out/: signature.json  summary.txt
src/: generator.py  kg_io.py  motif_counter.py  signature.py  signature_sampler.py
tests/: _block_e_library_oracle.py  _brute_motifs.py  block_e_verification_graphs.csv  conftest.py  test_dataset.py  test_generator_ipf.py  test_generator_motif_counter.py  test_generator_stage1.py  test_generator_stage2.py  test_kg_io.py  (+14 more)
(+698 files in other folders)
