[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kgsynth"
version = "0.1.0"
description = "Synthetic knowledge-graph generator matching a real KG's statistical signature"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "rdflib>=7.0",
    "igraph>=1.0",
    "powerlaw>=1.5",
    "matplotlib>=3.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-timeout>=2.1",
]
dev = [
    "ruff>=0.5",
]

[project.scripts]
kgsynth = "kgsynth.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Default rules (pyflakes F + a pycodestyle E subset) plus line-length (E501).
select = ["E4", "E7", "E9", "F", "E501"]

[tool.ruff.lint.per-file-ignores]
# The diagnostic scripts compute a module-level _REPO / sys.path anchor before
# importing kgsynth, which is import-after-code (E402) by necessity; the package
# code has no such need, so this relaxation is scoped to scripts/ only.
"scripts/*" = ["E402"]
